Added content to html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Liam's Travel Blog</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Title</h1>
+    <h3>Tagline</h3>
+    <p>Introductory Sentences</p>
+    <ul>
+      <li>Site1</li>
+      <li>Site2</li>
+      <li>Site3</li>
+    </ul>
+    <ol>
+      <li>Go somewhere</li>
+      <li>Go somewhere else</li>
+      <li>Eat food</li>
+      <li>Do other things</li>
+    </ol>
+  </body>
 </html>
